<resources>
    <string name="app_name" translatable="false">ThinkDo</string>
    <string name="menu">Menu</string>
    <string name="alignment">Alignment</string>
    <string name="preferences">Preferences</string>
    <string name="maintenance">Maintenance</string>
    <string name="net_set">Net Set</string>
    <string name="db_update">Database Update</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="host_address_set">Host Address set</string>
    <string name="ip_hint">host IP or hostName</string>
    <string name="port_hint">Port</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="about_explain">3D company all right reserved!</string>
    <string name="current_version">Current Version: </string>
    <string name="started_measure">Started Measure</string>
    <string name="fast_measure">Fast Measure</string>
    <string name="photo_monitor">Camera Monitor</string>
    <string name="special_measure">Special Measure</string>
    <string name="user_data">User Data</string>
    <string name="unit_set">Unit Set</string>
    <string name="garage_set">Garage Set</string>
    <string name="print_set">Print Set</string>
    <string name="add_car">Add Vehicle</string>
    <string name="vehicles_choice">VehiclesPick</string>
    <string name="pull_test">PullTest</string>
    <string name="kingpin_test">KingpinTest</string>
    <string name="fast_test">FastTest</string>
    <string name="rearAxle_show">RearAxleShow</string>
    <string name="frontAxle_show">FrontAxleShow</string>
    <string name="data_print">DataPrint</string>
    <string name="next">Next</string>
    <string name="left_front_camber">LeftFrontCamber</string>
    <string name="right_front_camber">RightFrontCamber</string>
    <string name="left_kpi">LeftKPI</string>
    <string name="right_kpi">RightKPI</string>
    <string name="left_caster">LeftCaster</string>
    <string name="right_caster">RightCaster</string>
    <string name="front_total_toe">FrontTotalToe</string>
    <string name="left_front_toe">LeftFrontToe</string>
    <string name="right_front_toe">RightFrontToe</string>
    <string name="left_rear_camber">LeftRearCamber</string>
    <string name="right_rear_camber">RightRearCamber</string>
    <string name="rear_total_toe">RearTotalToe</string>
    <string name="left_rear_toe">LeftRearToe</string>
    <string name="right_rear_toe">rightRearToe</string>
    <string name="test_result">Test Result</string>
    <string name="parameters">Parameters</string>
    <string name="print">Print</string>
    <string name="thrust_angle">ThrustAngle</string>
    <string name="wheelbase_diff">WheelbaseDiff</string>
    <string name="wheel_diff">WheelDiff</string>
    <string name="left_include_angle">LeftIncludeAngle</string>
    <string name="right_include_angle">RightIncludeAngle</string>
    <string name="left_turn_angle">LeftTurnAngle</string>
    <string name="right_turn_angle">RightTurnAngle</string>
    <string name="left_max_turn_angle">LeftMaxTurnAngle</string>
    <string name="right_max_turn_angle">RightMaxTurnAngle</string>
    <string name="leftWheelbase">LeftWheelbase(mm)</string>
    <string name="rightWheelbase">RightWheelbase(mm)</string>
    <string name="axleOffset">AxleOffset</string>
    <string name="tip_add_data">sure to add data?</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="tip_data_cannot_null">Data cannot be empty</string>
    <string name="tip_data_success_save">success save</string>
    <string name="garage_information">Garage Information</string>
    <string name="garage_name">GarageName</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="fax">Fax</string>
    <string name="post_code">Post Code</string>
    <string name="repair_man">Repair Man</string>
    <string name="mini_print">Mini Print</string>
    <string name="standard_print">Standard Print</string>
    <string name="unit">Unit</string>
    <string name="toe_unit">Toe Unit</string>
    <string name="unit1">Degree(°)</string>
    <string name="unit2">Degree Second(°\')</string>
    <string name="tip_chinese_vehicle">Chinese Vehicle</string>
    <string name="tip_european_vehicle">European Vehicle</string>
    <string name="tip_american_vehicle">American Vehicle</string>
    <string name="front">Front</string>
    <string name="rear">Rear</string>
    <string name="min">min</string>
    <string name="max">Max</string>
    <string name="mid">Middle</string>
    <string name="toe">Toe</string>
    <string name="camber">Camber</string>
    <string name="caster">Caster</string>
    <string name="kpi">KPI</string>
    <string name="totalToe">TotalToe</string>
    <string name="max_thrust_angle">MaxThrustAngle</string>
    <string name="front_wheel">FrontWheel</string>
    <string name="front_wheel_1">FrontWheel(mm)</string>
    <string name="rearWheel">RearWheel</string>
    <string name="rearWheel_1">RearWheel(mm)</string>
    <string name="wheelbase">Wheelbase</string>
    <string name="default_signal" translatable="false">—</string>
    <string name="attention_content_height">check the car ,adjust relative components and make sure relevant height measurement within standard</string>
    <string name="front_height_values">Front Height Values</string>
    <string name="rear_height_values">Rear Height Values</string>
    <string name="semicolon" translatable="false">:</string>
    <string name="left_front_height_value">Left Front Height Value</string>
    <string name="right_front_height_value">Right Front Height Value</string>
    <string name="left_rear_height_value">Left Rear Height Value</string>
    <string name="right_rear_height_value">Right Rear Height Value</string>
    <string name="left_front_level_value">Left Front Level Value</string>
    <string name="right_front_level_value">Right Front Level Value</string>
    <string name="left_rear_level_value">Left Rear Level Value</string>
    <string name="right_rear_level_value">Right Rear Level Value</string>
    <string name="weight_test">weight_test</string>
    <string name="height_test">Height Test</string>
    <string name="level_test">Level Test</string>
    <string name="tip_data_error">Error Data</string>
    <string name="tip_weight_test">Unit: KG</string>
    <string name="tip_height_test">Unit: MM</string>
    <string name="search_hint">search</string>
    <string name="search_no_result">No Record</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="start_year">Start Year</string>
    <string name="hint_start_year" translatable="false">1990</string>
    <string name="end_year">End Year</string>
    <string name="hint_end_year" translatable="false">2030</string>
    <string name="unit3">Millimeter</string>
    <string name="unit4">Inch</string>
    <string name="tire_type">Tire Type</string>
    <string name="diameter_mm">Diameter(MM)</string>
    <string name="diameter_inch">Diameter(Inch)</string>
    <string name="vehicle_info">Vehicle Information</string>
    <string name="multiplication" translatable="false">*</string>
    <string name="division" translatable="false">/</string>
    <string name="vehicle_data">Vehicle Data</string>
    <string name="error">Error</string>
    <string name="tip_raiseBtn_down">please lay down the car</string>
    <string name="tip_raiseBtn_up">Please lift up the car</string>
    <string name="pushCar_tip_init">initializing…</string>
    <string name="pushCar_tip_testing">testing</string>
    <string name="pushCar_tip_forward">Push the car forward</string>
    <string name="pushCar_tip_backward">Push the car backward</string>
    <string name="pushCar_tip_stop">Stop push car</string>
    <string name="pushCar_tip_data_handle">Data processing</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="plate_number">Plate Number</string>
    <string name="customer_name">Customer Name</string>
    <string name="add">add</string>
    <string name="travelling_mileage">Travelling Mileage(km)</string>
    <string name="malfunction">Malfunction</string>
    <string name="malfunction1">malfunction1</string>
    <string name="malfunction2">malfunction2</string>
    <string name="malfunction3">malfunction3</string>
    <string name="malfunction4">malfunction4</string>
    <string name="other">Other</string>
    <string name="notes">Notes</string>
    <string name="vehicleInfo">Vehicle Information</string>
    <string name="tip_printOrSave_data">PlateNumber Or Customer cannot be empty</string>
    <string name="tip_data_saved">Data have already saved.</string>
    <string name="tip_data_printing">Data was printing</string>
    <string name="add_customer">Add Customer</string>
    <string name="company">Company</string>
    <string name="tip_customer_cannt_null">Customer Name cannot be empty</string>
    <string name="tip_data_success_update">success update</string>
    <string name="back">back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="customer_info">CustomerInformation</string>
    <string name="history">History</string>
    <string name="test_date">Test Date</string>
    <string name="detail">Detail</string>
    <string name="tip_sure_delete">Are you sure delete?</string>
    <string name="tip_data_fail_save">Failed to save!</string>
    <string name="tip_exit_press_again">exit, press again</string>
    <string name="register">Register</string>
    <string name="register_code">Register Code</string>
    <string name="tip_login_already">Login Already</string>
    <string name="tip_login_failed">Login Failed</string>
    <string name="tip_login_success">Login Success</string>
    <string name="tip_connect_failed">Connected Failed</string>
    <string name="tip_cdk_error">register code error</string>
    <string name="tip_cdk_length_error">register code length error</string>
    <string name="tip_register_success">Register Success</string>
    <string name="remaining_days">Remaining days</string>
    <string name="devicesId">Devices ID</string>
    <string name="tip_please_login">Please Login</string>
    <string name="tip_recharge">please recharge</string>
    <string name="photo_light_set">photo light set</string>
    <string name="tip_photo_password">input photo password</string>
    <string name="tip_set_photo_password">photo password set</string>
    <string name="camera1">Camera 1</string>
    <string name="camera2">Camera 2</string>
    <string name="camera3">Camera 3</string>
    <string name="camera4">Camera 4</string>
    <string name="camera5">Camera 5</string>
    <string name="first_left_toe">firstLeftToe</string>
    <string name="second_left_toe">secondLeftToe</string>
    <string name="first_right_toe">firstRightToe</string>
    <string name="second_right_toe">secondRightToe</string>
    <string name="first_left_camber">firstLeftCamber</string>
    <string name="second_left_camber">secondLeftCamber</string>
    <string name="first_right_camber">firstRightCamber</string>
    <string name="second_right_camber">secondRightCamber</string>
    <string name="first_total_toe">firstTotalToe</string>
    <string name="second_total_toe">secondTotalToe</string>
    <string name="first_left_kpi">firstLeftKpi</string>
    <string name="first_right_kpi">firstRightKpi</string>
    <string name="second_left_kpi">secondLeftKpi</string>
    <string name="second_right_kpi">secondRightKpi</string>
    <string name="first_left_caster">firstLeftCaster</string>
    <string name="first_right_caster">firstRightCaster</string>
    <string name="second_left_caster">secondLeftCaster</string>
    <string name="second_right_caster">secondRightCaster</string>
</resources>