<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skd="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ib_menu"
    android:gravity="center"
    android:orientation="vertical">

    <include
        android:id="@+id/user_info"
        layout="@layout/include_user_info" />

    <com.thinkdo.view.BarItem
        android:id="@+id/barItem_hostSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        skd:barTextColor="@android:color/white"
        skd:barTitle="@string/net_set" />

    <com.thinkdo.view.BarItem
        android:id="@+id/barItem_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        skd:barTextColor="@android:color/white"
        skd:barTitle="@string/db_update" />

    <com.thinkdo.view.BarItem
        android:id="@+id/barItem_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        skd:barTextColor="@android:color/white"
        skd:barTitle="@string/register" />

    <com.thinkdo.view.BarItem
        android:id="@+id/barItem_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        skd:barTextColor="@android:color/white"
        skd:barTitle="@string/about" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_exit_btn"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/bar_font_size" />

</LinearLayout>