<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skd="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.thinkdo.view.NumberSeekBar
            android:id="@+id/bar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            skd:SeeKBarTitle="@string/camera1" />

        <com.thinkdo.view.NumberSeekBar
            android:id="@+id/bar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            skd:SeeKBarTitle="@string/camera2" />

        <com.thinkdo.view.NumberSeekBar
            android:id="@+id/bar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            skd:SeeKBarTitle="@string/camera3" />

        <com.thinkdo.view.NumberSeekBar
            android:id="@+id/bar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            skd:SeeKBarTitle="@string/camera4" />

        <com.thinkdo.view.NumberSeekBar
            android:id="@+id/bar5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            skd:SeeKBarTitle="@string/camera5" />

        <Button
            android:id="@+id/btn_submit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/selector_save_btn"
            android:text="@string/sure"
            android:textColor="@color/font_blue"
            android:textSize="24sp" />

    </LinearLayout>
</ScrollView>